@@ -285,7 +285,7 @@ public class BundleRequestMapper {
                 .filter(expertElement -> matchParty(
                     expertElement.getValue().getExpertOptionOtherParty(),
                     getPartyByPartyType(partyType, caseData)
-                )).toList();
+                )).collect(Collectors.toList());
             if (!tempList.isEmpty()) {
                 Map<String, List<Element<UploadEvidenceExpert>>> expertReportMap = groupExpertStatementsByName(tempList);
                 expertReportMap.forEach((expertName, expertEvidenceList) -> bundlingRequestDocuments.addAll(covertExpertEvidenceTypeToBundleRequestDocs(
@@ -556,7 +556,7 @@ public class BundleRequestMapper {
                                                                            .filter(caseDocumentElement -> caseDocumentElement.getValue().getDocumentType()
                                                                                .equals(DocumentType.DIRECTIONS_QUESTIONNAIRE)
                                                                                && caseDocumentElement.getValue().getDocumentLink().getCategoryID() == null)
-                                                                           .toList(),
+                                                                           .collect(Collectors.toList()),
                                                                        BundleFileNameList.DIRECTIONS_QUESTIONNAIRE_NO_CATEGORY_ID.getDisplayName()));
         return bundlingRequestDocuments;
     }
@@ -584,7 +584,7 @@ public class BundleRequestMapper {
                                                                            .equals(DocumentType.SEALED_CLAIM)
                                                                                && null != caseDocumentElement.getValue().getDocumentLink().getCategoryID()
                                                                                && caseDocumentElement.getValue().getDocumentLink().getCategoryID().equals("detailsOfClaim"))
-                                                                           .toList(),
+                                                                           .collect(Collectors.toList()),
                                                                        BundleFileNameList.CLAIM_FORM.getDisplayName()));
         bundlingRequestDocuments.addAll(mapParticularsOfClaimDocs(caseData));
         List<Element<CaseDocument>> clAndDfDocList = caseData.getDefendantResponseDocuments();
@@ -702,7 +702,7 @@ public class BundleRequestMapper {
         return documentEvidenceForTrial.stream().filter(uploadEvidenceDocumentTypeElement -> matchType(
             uploadEvidenceDocumentTypeElement.getValue().getTypeOfDocument(),
             displayNames, doesNotMatchType
-        )).toList();
+        )).collect(Collectors.toList());
     }
 
     private boolean matchType(String name, Collection<String> displayNames, boolean doesNotMatchType) {
